# hyprqt6engine

./: .gitignore  CMakeLists.txt  README.md  flake.nix
.github/workflows/: nix.yml
common/: CMakeLists.txt  common.cpp  common.hpp
common/config/: ConfigManager.cpp  ConfigManager.hpp
common/helpers/: Log.hpp  Memory.hpp
hyprqtplugin/: CMakeLists.txt  PlatformTheme.cpp  PlatformTheme.hpp  main.cpp
hyprqtplugin/helpers/: MiscFunctions.cpp  MiscFunctions.hpp
nix/: default.nix  overlays.nix
style/: CMakeLists.txt  ProxyStyle.cpp  ProxyStyle.hpp  engine.json  plugin.cpp
